--- a/build.gradle
+++ b/build.gradle
@@ -40,9 +40,17 @@ repositories {
 // Force resolution of json-smart to mitigate CVE-2023-1370
 configurations.all {
     resolutionStrategy {
-        force 'net.minidev:json-smart:2.5.0'
+        force 'net.minidev:json-smart:2.5.2'
         dependencySubstitution {
-            substitute module('net.minidev:json-smart:2.4.2') using module('net.minidev:json-smart:2.5.0') because 'CVE-2023-1370'
+            substitute module('net.minidev:json-smart:2.4.2') using module('net.minidev:json-smart:2.5.2') because 'CVE-2023-1370'
+        }
+        // Explicitly reject vulnerable versions
+        componentSelection {
+            withModule('net.minidev:json-smart') { ComponentSelection selection ->
+                if (selection.candidate.version == '2.4.2') {
+                    selection.reject('Vulnerable to CVE-2023-1370')
+                }
+            }
         }
     }
 }
@@ -86,8 +94,11 @@ dependencies {
         implementation(libs.nimbusJoseJwt) {
             because "CVE-2023-1370, CVE-2021-31684, CVE-2023-52428"
         }
+        implementation(libs.oauth2OidcSdk) {
+            because "CVE-2023-1370 - upgrade to version that doesn't depend on vulnerable json-smart"
+        }
         implementation(libs.jsonSmart) {
-            because "CVE-2023-1370 - upgrade from 2.4.2 to 2.5.0"
+            because "CVE-2023-1370 - upgrade from 2.4.2 to 2.5.2"
         }
         implementation(libs.okhttp) {
             because "CVE-2023-3635"
@@ -98,8 +109,11 @@ dependencies {
         pluginLibs(libs.nimbusJoseJwt) {
             because "CVE-2023-1370, CVE-2021-31684, CVE-2023-52428"
         }
+        pluginLibs(libs.oauth2OidcSdk) {
+            because "CVE-2023-1370 - upgrade to version that doesn't depend on vulnerable json-smart"
+        }
         pluginLibs(libs.jsonSmart) {
-            because "CVE-2023-1370 - upgrade from 2.4.2 to 2.5.0"
+            because "CVE-2023-1370 - upgrade from 2.4.2 to 2.5.2"
         }
         // Pins the version to avoid a dependency on okhttp 3.14.9 that suffers from the CVE.
         // This version of okhttp is inline with the one used in Rundeck 5.9.x
